bug fix on social calendar clipping

--- a/frontend/src/containers/NewsFeedView.css
+++ b/frontend/src/containers/NewsFeedView.css
@@ -24,7 +24,7 @@ width: 100%;
 
 .topCard {
   position: relative;
-
+  cursor: pointer;
   background: #FFFFFF;
 
   width:215px;
